--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,4 +1,5 @@
 ---
+import Modal from "./Modal.astro";
 import Package from "./Package.astro";
 
 // Tipos
@@ -131,7 +132,8 @@ const icons: Record<IconName, string> = {
       profesional hecha especialmente para ti
     </p>
 
-    <button class="group cursor-pointer mt-3 relative inline-flex items-center justify-center gap-3 bg-gradient-to-r from-[#f89a3f] via-[#ff6b35] to-[#f89a3f] hover:from-[#ff6b35] hover:via-[#f89a3f] hover:to-[#ff6b35] text-white px-4 md:py-3 rounded-full text-xl md:text-lg font-bold mb-4 transition-all duration-500 hover:scale-[1.02] w-full max-w-lg mx-auto md:w-auto md:max-w-none overflow-hidden border-2 border-[#ff6b35]/30">
+    <Modal/>
+    <!-- <button class="group cursor-pointer mt-3 relative inline-flex items-center justify-center gap-3 bg-gradient-to-r from-[#f89a3f] via-[#ff6b35] to-[#f89a3f] hover:from-[#ff6b35] hover:via-[#f89a3f] hover:to-[#ff6b35] text-white px-4 md:py-3 rounded-full text-xl md:text-lg font-bold mb-4 transition-all duration-500 hover:scale-[1.02] w-full max-w-lg mx-auto md:w-auto md:max-w-none overflow-hidden border-2 border-[#ff6b35]/30">
       <span class="relative z-10 flex items-center gap-3">
         <svg
           class="w-7 h-7 md:w-6 md:h-6"
@@ -160,7 +162,7 @@ const icons: Record<IconName, string> = {
         class="absolute inset-0 -translate-x-full group-hover:translate-x-full transition-transform duration-1000 bg-gradient-to-r from-transparent via-white/20 to-transparent skew-x-12"
       >
       </div>
-    </button>
+    </button> -->
   </div>
 
   <div class="grid lg:grid-cols-2 gap-12 items-start mb-16">
