--- a/src/components/ExcitingVideos.astro
+++ b/src/components/ExcitingVideos.astro
@@ -9,26 +9,26 @@ const videos = [
   {
     title: "Reacción Cumpleaños",
     desc: "La emoción de recibir una canción única",
-    src: "",
-    poster: image1.src
+    src: "https://maquila.nyc3.cdn.digitaloceanspaces.com/Requerimiento/video/ADS15BODAEVENTOS.mp4",
+    poster: "https://maquila.nyc3.cdn.digitaloceanspaces.com/Requerimiento/img/ContigoSoy.png"
   },
   {
     title: "Aniversario Especial",
     desc: "Amor en cada nota",
-    src: "",
-    poster: image2.src
+    src: "https://maquila.nyc3.cdn.digitaloceanspaces.com/Requerimiento/video/ADSGORDITA.mp4",
+    poster: "https://maquila.nyc3.cdn.digitaloceanspaces.com/Requerimiento/img/LoQueNoTeDije.png"
   },
   {
     title: "Canción para la Abuelita",
     desc: "Ternura y emoción",
-    src: "",
-    poster: image3.src
+    src: "https://maquila.nyc3.cdn.digitaloceanspaces.com/Requerimiento/video/ADSABUELITA.mp4",
+    poster: "https://maquila.nyc3.cdn.digitaloceanspaces.com/Requerimiento/img/MadreEterna.png"
   },
   {
     title: "Para Mi Gordita",
     desc: "Una sorpresa romántica",
-    src: "",
-    poster: image4.src
+    src: "https://maquila.nyc3.cdn.digitaloceanspaces.com/Requerimiento/video/ADSGORDITA.mp4",
+    poster:"https://maquila.nyc3.cdn.digitaloceanspaces.com/Requerimiento/img/NoticiaBendita.png"
   }
 ];
 ---
