--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,7 +4,7 @@ import logoLetraViva from "../img/logo_letra_viva.png";
 const currentPath = Astro.url.pathname;
 ---
 
-<nav class="fixed top-0 left-0 w-full bg-white z-50">
+<nav class="sticky top-0 left-0 w-full bg-white  ">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center h-18">
       
@@ -163,6 +163,6 @@ const currentPath = Astro.url.pathname;
   }
 
   nav {
-    z-index: 50;
+   z-index: 40;
   }
 </style>
