--- a/src/components/WhatsAppCarrot.astro
+++ b/src/components/WhatsAppCarrot.astro
@@ -43,7 +43,7 @@ const images = [
             ></path></svg
         >
     </div>
-    <div class="text-center mb-10 relative z-10">
+    <div class="text-center mb-10 relative ">
         <div
             class="inline-flex items-center gap-2 bg-[#25D366] text-white px-6 py-2 rounded-full text-sm font-bold mb-6 shadow-lg"
         >
