--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,12 @@ import ExcitingVideos from '../components/ExcitingVideos.astro';
 import Music from '../components/Music.astro';
 import Questions from '../components/Questions.astro';
 import ButtonWhatsApp from '../components/ButtonWhatsApp.astro';
+import Navbar from '../components/Navbar.astro';
 ---
 
 <Layout>	
-	<Welcome />
+	<Navbar/>
+	<Welcome/>
 	<div class="px-4 md:px-6 lg:px-8">
 		<Features/>
 		<WhatsAppCarrot/>
