--- a/src/components/Package.astro
+++ b/src/components/Package.astro
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div class="relative">
-    <div class="text-center mb-16 relative z-10">
+    <div class="text-center mb-16 relative ">
         <h3
             class="text-4xl md:text-6xl font-bold text-gray-900 mb-6 text-balance leading-tight"
         >
@@ -82,7 +82,7 @@
                 </div></button
             >
         </div><div class="w-full lg:w-[28rem] relative">
-            <div class="absolute -top-6 left-1/2 -translate-x-1/2 z-20">
+            <div class="absolute -top-6 left-1/2 -translate-x-1/2 z-1">
                 <div class="relative">
                     <span class="bg-gradient-to-r from-[#f89a3f] via-[#ff6b35] to-[#f89a3f] text-white px-2 py-3 rounded-full text-base font-bold shadow-2xl flex items-center gap-2 animate-pulse"
                         >⭐ MÁS POPULAR ⭐</span
