--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import Banner from "../components/Banner.astro";
 		<title>Astro Basics</title>
 	</head>
 	<body>
-		<Navbar/>
+		<!-- <Navbar/> -->
 		<div >			
 			<slot/>
 		</div>
