--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -38,11 +38,11 @@
 
 	<div class="absolute inset-0 z-0">
 		<!-- Puedes descomentar la imagen si la necesitas -->
-		<!-- <img
+		<img
 			alt="Pareja feliz en auto"
-			class="w-full h-full object-cover opacity-30"
-			src="//letravivaoficial.com/cdn/shop/files/PAGINA_DE_INICIO.png?v=1753674589&width=3840"
-		/> -->
+			class="w-full h-full object-cover opacity-30 "
+			src="https://maquila.nyc3.cdn.digitaloceanspaces.com/Requerimiento/img/IMAGEN%20DE%20INICIO%20CENTRAL.png"
+		/>
 		<div
 			class="absolute inset-0 bg-gradient-to-t from-[oklch(0.35_0.10_200)] via-[oklch(0.35_0.10_200)]/80 to-transparent"
 		>
