Queda funcionando el proceso de contra entrega

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,7 +1,7 @@
 ---
 import { fetchProductVariants } from "../lib/shopify.server";
-import Modal from "./svelte/Modal.svelte";
-import ModalReact from "./svelte/ModalReact.tsx";
+import Modal from "./react/Modal.svelte";
+import ModalReact from "./react/ModalReact.tsx";
 
 const variants = await fetchProductVariants('8847688794261');
 // Tipos
